--- a/maven/Parent/pom.xml
+++ b/maven/Parent/pom.xml
@@ -4,4 +4,16 @@
   <artifactId>Parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  
+  <!-- 依賴管理 -->
+  <dependencyManagement>
+  	<dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+  	</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
